<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/konversi_massa"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- TextView di atas Spinner -->
    <TextView
        android:id="@+id/textViewSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/pilih_massa" />

    <Spinner
        android:id="@+id/spinnerConversionType"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSelect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:minHeight="48dp" />

    <!-- TextView di atas EditText -->
    <TextView
        android:id="@+id/textViewInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerConversionType"
        android:layout_centerHorizontal="true"
        android:text="@string/input_angka_massa" />

    <EditText
        android:id="@+id/editTextValue"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewInput"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/masukan_massa"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/konversie" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonConvert"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/eee"
        android:textSize="20sp" />

</RelativeLayout>
